--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -100,6 +100,8 @@ $vimeo-color: #1ab7ea !default;
 $vine-color: #00bf8f !default;
 $youtube-color: #bb0000 !default;
 $xing-color: #006567 !default;
+$g-plus-color: #dd4b39 !default;
+$whatsapp-color: #25D366 !default;
 
 /* links */
 $link-color: mix(#000, $info-color, 15%) !default;
